<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_bar"
        style="@style/TitleBar">

        <include
            android:id="@+id/view_back"
            layout="@layout/view_title_bar_back" />

        <TextView
            style="@style/TV.Title"
            android:text="@string/mine_register" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/ll_step_input_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_phone"
                style="@style/common_edit_text"
                android:hint="@string/mine_input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_next"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_radius_blue_style"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/next"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:checked="true"
                    android:id="@+id/checkbox_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textview_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_agreement"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_step_input_validate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    >

                    <EditText
                        android:layout_weight="5"
                        android:id="@+id/et_code"
                        android:hint="@string/mine_input_code"
                        android:inputType="phone"
                        style="@style/common_edit_text"
                        android:maxLength="5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/btn_getcode"
                        android:background="@drawable/btn_radius_blue_style"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:text="@string/mine_getcode"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/btn_validate"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_radius_blue_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/validate"
                    android:textColor="@color/white"
                    />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_step_input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:visibility="visible">

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/et_pwd"
                    android:hint="@string/mine_input_pwd"
                    android:inputType="textWebPassword"
                    style="@style/common_edit_text"
                    android:maxLength="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_config"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_radius_blue_style"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/config"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>