<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/white"
    android:orientation="horizontal" >
  <LinearLayout
        android:id="@+id/ll_hotApp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/app_hot_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="14sp"
            android:text="@string/app_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_rankApp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/app_rank_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="14sp"
            android:text="@string/app_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_typeApp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/app_type_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="14sp"
            android:text="@string/app_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_newApp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/app_new_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  />
        <TextView
            android:text="@string/app_new"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
