<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/title_bar"
        style="@style/TitleBar">

        <include
            android:id="@+id/view_back"
            layout="@layout/view_title_bar_back" />

        <TextView
            style="@style/TV.Title"
            android:text="@string/mine_my_setting" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_wifi"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/mine_setting_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/toggleBtn_wifi"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="#00000000"
            style="@style/ToggleButton"
            android:checked="true"
            android:textOff=""
            android:textOn=""
        />
    </RelativeLayout>

    <include
        layout="@layout/view_line"
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:id="@+id/rl_cleanCache"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/textViewCacheSize"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/mine_setting_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/textview_cacheValue"
            android:src="@drawable/arrow_right"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="230M"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <include
        layout="@layout/view_line"
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:id="@+id/rl_updateVersion"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/mine_setting_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/textview_version"
            android:src="@drawable/arrow_right"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="当前版本1.0.1"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <include
        layout="@layout/view_line"
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:id="@+id/rl_agreement"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/mine_setting_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/arrow_right"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <include
        layout="@layout/view_line"
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:id="@+id/rl_license"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/mine_setting_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/arrow_right"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <include
        layout="@layout/view_line"
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:id="@+id/rl_aboutUs"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/mine_setting_aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/arrow_right"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <include
        layout="@layout/view_line"
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"/>

    <Button
        android:id="@+id/loginOut_button"
        android:background="@color/borderColor"
        android:text="@string/mine_setting_loginout"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:textColor="#4f4f4f"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

</LinearLayout>